Some registry renaming for modern MC naming standards